<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">سالاپەتلىك چاچ</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcometext"> سالاپىتىڭىز ،ياراشقان چاچ پاسونى!</string>
	<string name="btn_1">قسقا چاچ </string>
	<string name="btn_2">ئۇزۇن چاچ </string>
	<string name="btn_3">قالايمىقان چاچ </string>
	<string name="btn_4">ئوتتۇرا چاچ </string>
	<string name="des_zh">\t小时候，剪发都是有家长带着去的。剪成什么样的发型完全由家长话事，家长说什么发型，理发师就剪成什么发型！如果剪出来不好看，回学校就会被小伙伴们各种哈哈哈！趁你不注意的时候稍稍地抚摸你的头，就是说你丑到没朋友新发型必须要给大家摸一摸才行，否则头发越长越难看，我们称之为“开光”！</string>
	<string name="des_uy">كىچىك ۋاقىتلىرىمىزدا ،چاچ ياسىتىشقا دائىم ئاتا-ئانىمىز ئېلىپ باراتتى. شۇلار قانداق ياساپ قوي دېسە،ساتىراچ ئۇستام شۇنداق ياساپ قوياتتى. ئەگەر سەت ياساپ قويغان بولسا ،مەكتەپكە قايتقاندا ،باللار ئۇنداق-مۇنداق زاڭلىق قىلىشاتتۇق .... دېققەت قىلمىغاندا ،بېشڭىنى سىلاپ ،ئۇرۇپ قوياتتى ،يەنە تېخى مۇشۇنداق قىلمىساق چېچىڭ تېز ئۆسمەيدۇ دەيتتۇق ،مانا بۇ بىزنىڭ (ئۇستىرا ھەققى)!</string>
</resources>
